# openCLplayground

conv/: 2dmain.cpp  Makefile  main  main.cpp
conv/include/: 1d_tiled.cl  2d_const.cl
image_processing/: .gitignore  CMakeLists.txt  ImageProcessing  Makefile
image_processing/include/: image.h  masks.h  opencl_image.h  pch.h
image_processing/include/kernels/: convolution.cl  diffmap.cl  flip.cl  grayscale.cl  resize.cl
image_processing/src/: image.cpp  main.cpp  opencl_image.cpp  test.cc
matrix-mult/: main  main.cpp
matrix-mult/include/: mm_kernel.cl
qual-mm/: Makefile  Matrix multiply.cl  main  matrix_multiply.cpp
radix/: Makefile  main  main.cpp
radix/include/: radix_kernel.cl  radix_para_kernel.cl
